--- a/New folder/style.css
+++ b/New folder/style.css
@@ -1,21 +1,20 @@
-
-
-#main-div 
-{
+#main-div {
   height: 100%;
- background-color: blueviolet;
+  /* background-image: url("./images/Pokemon_Pikachu_1920x1080.jpg"); */
+  background-image: url("./images/unsplash-bg.jpg");
+  /* background-repeat: no-repeat; */
+  object-fit: contain;
+
 }
 
-#header 
-{
+#header {
   height: 3000px;
-  box-shadow: 0 0 5px 0 ;
+  box-shadow: 0 0 5px 0;
   border-radius: 10px;
   background-color: rgba(250, 250, 250, 0.253);
   backdrop-filter: blur(5px);
 }
 
-*img
-{
-height: 200px;
+*img {
+  height: 200px;
 }
